tests/fixtures/invalid/pow_str_float_bool.py
# Cannot call pow() with Str, Float, Bool
x = pow("hello", 1.0, True)
